refactor: navigateToPetEdit 필요없는 인자 제거

--- a/android/app/src/main/res/layout/item_pet_profile.xml
+++ b/android/app/src/main/res/layout/item_pet_profile.xml
@@ -23,7 +23,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout_user_profile_edit"
-            onSingleClick="@{() -> actionHandler.navigateToPetEdit(petView.id)}"
+            onSingleClick="@{() -> actionHandler.navigateToPetEdit()}"
             android:layout_width="80dp"
             android:layout_height="80dp"
             app:layout_constraintStart_toStartOf="parent"
