--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -218,6 +218,7 @@
         <ImageButton
             android:id="@+id/btn_woof_walk_help"
             myWalkStatusVisibility="@{vm.myWalkStatus}"
+            uiState="@{vm.uiState}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -234,6 +235,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_woof_walk"
             myWalkStatusVisibility="@{vm.myWalkStatus}"
+            uiState="@{vm.uiState}"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_marginHorizontal="12dp"
@@ -412,7 +414,7 @@
             android:paddingHorizontal="6dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:visibility="visible">
+            tools:visibility="gone">
 
             <TextView
                 android:id="@+id/tv_woof_register_walk_area"
