--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -172,8 +172,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_woof_location"
-            findFriendsVisibility="@{vm.uiState}"
-            locationBtnMarginBottom="@{vm.myWalkStatus}"
+            locationBtn="@{vm.myWalkStatus}"
+            uiState="@{vm.uiState}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -191,8 +191,8 @@
 
         <FrameLayout
             android:id="@+id/btn_woof_location"
-            findFriendsVisibility="@{vm.uiState}"
-            locationBtnMarginBottom="@{vm.myWalkStatus}"
+            locationBtn="@{vm.myWalkStatus}"
+            uiState="@{vm.uiState}"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginStart="10dp"
@@ -217,7 +217,7 @@
 
         <ImageButton
             android:id="@+id/btn_woof_walk_help"
-            myWalkStatusVisibility="@{vm.myWalkStatus}"
+            helpBtn="@{vm.myWalkStatus}"
             uiState="@{vm.uiState}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -226,7 +226,7 @@
             android:layout_marginBottom="10dp"
             android:background="@drawable/rect_coral10_fill_50"
             android:elevation="10dp"
-            android:onClick="@{() -> actionHandler.clickWalkHelp()}"
+            android:onClick="@{() -> actionHandler.clickHelpBtn()}"
             android:padding="6dp"
             android:src="@drawable/ic_help_coral500"
             app:layout_constraintBottom_toTopOf="@id/layout_woof_walk"
@@ -359,37 +359,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_woof_location_register"
-            registeringVisibility="@{vm.uiState}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="12dp"
-            android:layout_marginBottom="12dp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toTopOf="@id/layout_woof_register_marker"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <com.naver.maps.map.widget.LocationButtonView
-                android:id="@+id/lbv_woof_location_register"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <FrameLayout
-            android:id="@+id/btn_woof_location_register"
-            registeringVisibility="@{vm.uiState}"
-            android:layout_width="46dp"
-            android:layout_height="46dp"
-            android:layout_marginEnd="12dp"
-            android:layout_marginBottom="12dp"
-            android:onClick="@{() -> actionHandler.clickLocationBtn()}"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toTopOf="@id/layout_woof_register_marker"
-            app:layout_constraintEnd_toEndOf="parent" />
-
         <ImageView
             android:id="@+id/iv_woof_register_marker"
             registeringVisibility="@{vm.uiState}"
@@ -426,19 +395,6 @@
                 android:text="@string/woof_register_walk_area"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageButton
-                android:id="@+id/btn_woof_register_help"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="center"
-                android:layout_marginStart="8dp"
-                android:backgroundTint="@color/transparent"
-                android:onClick="@{() -> actionHandler.clickRegisterHelp()}"
-                android:src="@drawable/ic_help_coral400"
-                app:layout_constraintBottom_toBottomOf="@id/tv_woof_register_walk_area"
-                app:layout_constraintStart_toEndOf="@id/tv_woof_register_walk_area"
-                app:layout_constraintTop_toTopOf="@id/tv_woof_register_walk_area" />
 
 
             <TextView
