--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -24,26 +24,7 @@
         <com.naver.maps.map.MapView
             android:id="@+id/map_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clickable="true"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp">
-
-            <ImageButton
-                android:id="@+id/btn_woof_back"
-                style="@style/Theme.AppCompat.TextView.SemiBold.White.Size14"
-                registeringVisibility="@{vm.uiState}"
-                android:layout_width="46dp"
-                android:layout_height="46dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/rect_coral400_fill_12"
-                android:elevation="10dp"
-                android:gravity="center"
-                android:onClick="@{() -> actionHandler.clickBackBtn()}"
-                android:src="@drawable/ic_arrow_left_white"
-                android:visibility="invisible" />
-        </com.naver.maps.map.MapView>
+            android:layout_height="match_parent" />
 
         <TextView
             android:id="@+id/btn_woof_status_all"
@@ -53,7 +34,7 @@
             stateVisibility="@{vm.uiState}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/rect_white_fill_30"
             android:elevation="4dp"
@@ -62,6 +43,7 @@
             android:paddingHorizontal="12dp"
             android:paddingVertical="8dp"
             android:text="@string/woof_status_all"
+            app:layout_constraintEnd_toStartOf="@id/btn_woof_status_before"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -73,7 +55,6 @@
             stateVisibility="@{vm.uiState}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/rect_white_fill_30"
             android:drawablePadding="6dp"
@@ -84,6 +65,7 @@
             android:paddingVertical="8dp"
             android:text="@string/woof_status_before"
             app:drawableStartCompat="@drawable/ic_marker_before"
+            app:layout_constraintEnd_toStartOf="@id/btn_woof_status_ongoing"
             app:layout_constraintStart_toEndOf="@id/btn_woof_status_all"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -95,7 +77,6 @@
             stateVisibility="@{vm.uiState}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/rect_white_fill_30"
             android:drawablePadding="6dp"
@@ -106,6 +87,7 @@
             android:paddingVertical="8dp"
             android:text="@string/woof_status_ongoing"
             app:drawableStartCompat="@drawable/ic_marker_ongoing"
+            app:layout_constraintEnd_toStartOf="@id/btn_woof_status_after"
             app:layout_constraintStart_toEndOf="@id/btn_woof_status_before"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -117,8 +99,8 @@
             stateVisibility="@{vm.uiState}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
             android:layout_marginTop="20dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/rect_white_fill_30"
             android:drawablePadding="6dp"
             android:elevation="4dp"
@@ -128,13 +110,15 @@
             android:paddingVertical="8dp"
             android:text="@string/woof_status_after"
             app:drawableStartCompat="@drawable/ic_marker_after"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/btn_woof_status_ongoing"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/btn_woof_footprint_refresh"
             style="@style/Theme.AppCompat.TextView.SemiBold.Coral400.Size14"
-            refreshBtnVisibility="@{vm.uiState}"
+            refreshBtnVisibility="@{vm.refreshBtnVisible}"
+            uiState="@{vm.uiState}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
@@ -151,6 +135,23 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_woof_status_before" />
+
+        <ImageButton
+            android:id="@+id/btn_woof_back"
+            style="@style/Theme.AppCompat.TextView.SemiBold.White.Size14"
+            registeringVisibility="@{vm.uiState}"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rect_coral400_fill_12"
+            android:elevation="10dp"
+            android:gravity="center"
+            android:onClick="@{() -> actionHandler.clickBackBtn()}"
+            android:src="@drawable/ic_arrow_left_white"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/btn_woof_close"
@@ -171,7 +172,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_woof_location"
-            locationBtnMarginBottom="@{vm.myWalkStatus}"
+            locationBtn="@{vm.myWalkStatus}"
+            uiState="@{vm.uiState}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -189,7 +191,8 @@
 
         <FrameLayout
             android:id="@+id/btn_woof_location"
-            locationBtnMarginBottom="@{vm.myWalkStatus}"
+            locationBtn="@{vm.myWalkStatus}"
+            uiState="@{vm.uiState}"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginStart="10dp"
@@ -200,6 +203,7 @@
         <TextView
             android:id="@+id/btn_woof_my_footprint"
             style="@style/Theme.AppCompat.TextView.SemiBold.White.Size14"
+            findFriendsVisibility="@{vm.uiState}"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginStart="12dp"
@@ -213,16 +217,17 @@
 
         <ImageButton
             android:id="@+id/btn_woof_walk_help"
-            myWalkStatusVisibility="@{vm.myWalkStatus}"
+            helpBtn="@{vm.myWalkStatus}"
+            uiState="@{vm.uiState}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/rect_coral10_fill_50"
-            android:padding="6dp"
-            android:onClick="@{() -> actionHandler.clickWalkHelp()}"
             android:elevation="10dp"
+            android:onClick="@{() -> actionHandler.clickHelpBtn()}"
+            android:padding="6dp"
             android:src="@drawable/ic_help_coral500"
             app:layout_constraintBottom_toTopOf="@id/layout_woof_walk"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -230,6 +235,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_woof_walk"
             myWalkStatusVisibility="@{vm.myWalkStatus}"
+            uiState="@{vm.uiState}"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_marginHorizontal="12dp"
@@ -302,6 +308,7 @@
 
         <ImageButton
             android:id="@+id/btn_woof_mark"
+            findFriendsVisibility="@{vm.uiState}"
             markBtnVisibility="@{vm.myWalkStatus}"
             android:layout_width="80dp"
             android:layout_height="80dp"
@@ -352,37 +359,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_woof_location_register"
-            registeringVisibility="@{vm.uiState}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="12dp"
-            android:layout_marginBottom="12dp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toTopOf="@id/layout_woof_register_marker"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <com.naver.maps.map.widget.LocationButtonView
-                android:id="@+id/lbv_woof_location_register"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <FrameLayout
-            android:id="@+id/btn_woof_location_register"
-            registeringVisibility="@{vm.uiState}"
-            android:layout_width="46dp"
-            android:layout_height="46dp"
-            android:layout_marginEnd="12dp"
-            android:layout_marginBottom="12dp"
-            android:onClick="@{() -> actionHandler.clickLocationBtn()}"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toTopOf="@id/layout_woof_register_marker"
-            app:layout_constraintEnd_toEndOf="parent" />
-
         <ImageView
             android:id="@+id/iv_woof_register_marker"
             registeringVisibility="@{vm.uiState}"
@@ -407,7 +383,7 @@
             android:paddingHorizontal="6dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:visibility="visible">
+            tools:visibility="gone">
 
             <TextView
                 android:id="@+id/tv_woof_register_walk_area"
@@ -415,23 +391,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/woof_register_walk_area"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageButton
-                android:id="@+id/btn_woof_register_help"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="center"
-                android:layout_marginStart="8dp"
-                android:backgroundTint="@color/transparent"
-                android:onClick="@{() -> actionHandler.clickRegisterHelp()}"
-                android:src="@drawable/ic_help_coral400"
-                app:layout_constraintBottom_toBottomOf="@id/tv_woof_register_walk_area"
-                app:layout_constraintStart_toEndOf="@id/tv_woof_register_walk_area"
-                app:layout_constraintTop_toTopOf="@id/tv_woof_register_walk_area" />
 
 
             <TextView
@@ -440,9 +403,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="12dp"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="10dp"
                 android:text="@{vm.addressLine}"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_woof_register_walk_area"
                 tools:text="서울 송파구 올림픽로35다길 42서울 송파구 올림픽로35다길 42" />
@@ -450,10 +413,12 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_woof_register_footprint"
                 style="@style/Theme.AppCompat.TextView.SemiBold.White.Size20"
+                cameraIdle="@{vm.registerFootprintBtn.cameraIdle}"
+                uiState="@{vm.uiState}"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginHorizontal="12dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/rect_coral400_fill_16"
                 android:onClick="@{() -> actionHandler.clickRegisterMarkerBtn()}"
                 android:text="@string/woof_register_footprint"
