refactor: WoofactionHandler를 Fragment에서  ViewModel로 이동

--- a/android/app/src/main/res/layout/item_footprint_info_pet_detail.xml
+++ b/android/app/src/main/res/layout/item_footprint_info_pet_detail.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="actionHandler"
-            type="com.happy.friendogly.presentation.ui.woof.WoofActionHandler" />
+            type="com.happy.friendogly.presentation.ui.woof.action.WoofActionHandler" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
