--- a/android/app/src/main/res/layout/activity_pet_image.xml
+++ b/android/app/src/main/res/layout/activity_pet_image.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
-        tools:context=".presentation.ui.woof.PetImageActivity">
+        tools:context=".presentation.ui.petimage.PetImageActivity">
 
         <ImageView
             android:id="@+id/iv_pet_image_close"
