--- a/android/app/src/main/res/layout/fragment_chat_list.xml
+++ b/android/app/src/main/res/layout/fragment_chat_list.xml
@@ -43,6 +43,7 @@
                 android:id="@+id/rcv_chat_list"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                 app:layout_constraintTop_toBottomOf="@id/appbar_chat_list_main"
