feat: 마커 화살표 구현

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
     <color name="coral500">#F7634E</color>
     <color name="coral400">#FF7C6B</color>
     <color name="coral300">#FA9487</color>
+    <color name="coral250">#F9A89B</color>
     <color name="coral200">#F8B0A3</color>
     <color name="coral150">#F7C8BD</color>
     <color name="coral100">#F6D0CB</color>
