--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -472,6 +472,13 @@
         <item name="fontFamily">@font/pretendard_semi_bold</item>
     </style>
 
+    <style name="Theme.AppCompat.TextView.SemiBold.Coral400.Size16" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/coral400</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/pretendard_semi_bold</item>
+    </style>
+
     <style name="Theme.AppCompat.TextView.SemiBold.Coral500.Size14" parent="@style/Widget.AppCompat.TextView">
         <item name="android:textColor">@color/coral400</item>
         <item name="android:textSize">14dp</item>
