--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -150,7 +150,7 @@
             android:elevation="10dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:visibility="visible">
+            tools:visibility="invisible">
 
             <ImageButton
                 android:id="@+id/btn_woof_delete_my_footprint"
@@ -271,7 +271,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginBottom="46dp"
-            android:src="@drawable/ic_marker_mine_clicked"
+            android:src="@drawable/ic_marker_ongoing_clicked"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -289,16 +289,16 @@
             android:paddingHorizontal="6dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:visibility="gone">
+            tools:visibility="visible">
 
             <TextView
                 android:id="@+id/tv_woof_register_walk_area"
                 style="@style/Theme.AppCompat.TextView.SemiBold.Orange.Size26"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:text="@string/woof_register_walk_area"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
+                android:text="@string/woof_register_playground_title"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -308,7 +308,7 @@
                 style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size18"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
+                android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="10dp"
                 android:text="@{vm.addressLine}"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -323,11 +323,11 @@
                 uiState="@{vm.uiState}"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:layout_marginHorizontal="12dp"
+                android:layout_marginHorizontal="14dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/rect_coral400_fill_16"
                 android:onClick="@{() -> vm.clickRegisterMarkerBtn()}"
-                android:text="@string/woof_register_footprint"
+                android:text="@string/woof_register_playground"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
