--- a/android/app/src/main/res/drawable/rect_gray150_fill_8.xml
+++ b/android/app/src/main/res/drawable/rect_gray150_fill_8.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="12dp" />
-    <solid android:color="@color/coral200" />
+    <corners android:radius="8dp" />
+    <solid android:color="@color/gray150" />
 </shape>
