--- a/android/app/src/main/res/layout/item_playground_pet_detail.xml
+++ b/android/app/src/main/res/layout/item_playground_pet_detail.xml
@@ -7,29 +7,26 @@
 
         <variable
             name="petDetailInfo"
-            type="com.happy.friendogly.presentation.ui.woof.uimodel.PetDetailInfoUiModel" />
+            type="com.happy.friendogly.presentation.ui.playground.uimodel.PetDetailInfoUiModel" />
 
         <variable
             name="actionHandler"
-            type="com.happy.friendogly.presentation.ui.woof.action.WoofActionHandler" />
+            type="com.happy.friendogly.presentation.ui.playground.action.PlaygroundActionHandler" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_woof_foot_print"
+        android:id="@+id/layout_playground_pet_detail"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginVertical="14dp"
-        android:background="@drawable/rect_white_fill_30"
-        android:elevation="10dp"
-        android:paddingVertical="20dp">
+        android:layout_height="wrap_content"
+        android:paddingVertical="14dp">
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/iv_woof_dog"
+            android:id="@+id/iv_playground_pet"
             glide="@{petDetailInfo.petDetail.imageUrl}"
             android:layout_width="110dp"
             android:layout_height="110dp"
-            android:layout_marginStart="14dp"
-            android:onClick="@{() -> actionHandler.clickFootprintPetImage(petDetailInfo.petDetail.imageUrl)}"
+
+            android:onClick="@{() -> actionHandler.clickPetImage(petDetailInfo.petDetail.imageUrl)}"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -37,42 +34,41 @@
             tools:src="@drawable/img_dog" />
 
         <TextView
-            android:id="@+id/tv_woof_dog_name"
+            android:id="@+id/tv_playground_pet_name"
             style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size22"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:text="@{petDetailInfo.petDetail.name}"
-            app:layout_constraintStart_toEndOf="@id/iv_woof_dog"
-            app:layout_constraintTop_toTopOf="@id/iv_woof_dog"
+            app:layout_constraintStart_toEndOf="@id/iv_playground_pet"
+            app:layout_constraintTop_toTopOf="@id/iv_playground_pet"
             tools:text="땡이" />
 
         <TextView
-            android:id="@+id/tv_woof_dog_age"
+            android:id="@+id/tv_playground_pet_age"
             style="@style/Theme.AppCompat.TextView.SemiBold.Gray08.Size18"
             petAge="@{petDetailInfo.petDetail.birthDate}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toBottomOf="@id/tv_woof_dog_name"
-            app:layout_constraintStart_toEndOf="@id/tv_woof_dog_name"
+            app:layout_constraintBottom_toBottomOf="@id/tv_playground_pet_name"
+            app:layout_constraintStart_toEndOf="@id/tv_playground_pet_name"
             tools:text="11살" />
 
         <TextView
-            android:id="@+id/tv_woof_dog_state"
+            android:id="@+id/tv_playground_pet_state"
             style="@style/Theme.AppCompat.TextView.Regular.White.Size14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="14dp"
             android:background="@drawable/rect_green400_fill_20"
             android:paddingHorizontal="12dp"
             android:paddingVertical="6dp"
             android:text="노는중"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/tv_woof_dog_name" />
+            app:layout_constraintTop_toTopOf="@id/tv_playground_pet_name" />
 
         <TextView
-            android:id="@+id/tv_woof_dog_size"
+            android:id="@+id/tv_playground_pet_size"
             style="@style/Theme.AppCompat.TextView.Regular.White.Size14"
             petSizeType="@{petDetailInfo.petDetail.sizeType}"
             android:layout_width="wrap_content"
@@ -81,12 +77,12 @@
             android:background="@drawable/rect_coral300_fill_10"
             android:paddingHorizontal="12dp"
             android:paddingVertical="6dp"
-            app:layout_constraintStart_toStartOf="@id/tv_woof_dog_name"
-            app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_name"
+            app:layout_constraintStart_toStartOf="@id/tv_playground_pet_name"
+            app:layout_constraintTop_toBottomOf="@id/tv_playground_pet_name"
             tools:text="소형견" />
 
         <TextView
-            android:id="@+id/tv_woof_dog_gender"
+            android:id="@+id/tv_playground_pet_gender"
             style="@style/Theme.AppCompat.TextView.Regular.White.Size14"
             petGender="@{petDetailInfo.petDetail.gender}"
             android:layout_width="wrap_content"
@@ -96,17 +92,17 @@
             android:background="@drawable/rect_coral300_fill_10"
             android:paddingHorizontal="12dp"
             android:paddingVertical="6dp"
-            app:layout_constraintStart_toEndOf="@id/tv_woof_dog_size"
-            app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_name"
+            app:layout_constraintStart_toEndOf="@id/tv_playground_pet_size"
+            app:layout_constraintTop_toBottomOf="@id/tv_playground_pet_name"
             tools:text="암컷" />
 
         <TextView
-            android:id="@+id/tv_woof_dog_description"
+            android:id="@+id/tv_playground_pet_description"
             style="@style/Theme.AppCompat.TextView.Regular.Gray09.Size12"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:background="@drawable/rect_gray150_fill_8"
+            android:background="@drawable/rect_gray150_fill_10"
             android:maxLines="1"
             android:paddingHorizontal="10dp"
             android:paddingVertical="10dp"
@@ -114,9 +110,9 @@
             android:textColor="@color/black"
             android:textStyle="bold"
             app:drawableEndCompat="@drawable/ic_pen"
-            app:layout_constraintEnd_toEndOf="@id/tv_woof_dog_state"
-            app:layout_constraintStart_toStartOf="@id/tv_woof_dog_name"
-            app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_gender"
+            app:layout_constraintEnd_toEndOf="@id/tv_playground_pet_state"
+            app:layout_constraintStart_toStartOf="@id/tv_playground_pet_name"
+            app:layout_constraintTop_toBottomOf="@id/tv_playground_pet_gender"
             tools:text="땡이는 사람을 좋아해요!" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
