--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -33,7 +33,7 @@
     <color name="coral10">#FFF5F3</color>
     <color name="coral05">#FFF9F8</color>
 
-    <color name="green400">#46E825</color>
+    <color name="green400">#00D435</color>
     <color name="blue">#8AABFF</color>
     <color name="map_circle">#1A6568EB</color>
     <color name="lottie_layout">#4DBDBDBD</color>
