--- a/android/app/src/main/res/layout/item_playground_first_pet_detail.xml
+++ b/android/app/src/main/res/layout/item_playground_first_pet_detail.xml
@@ -95,13 +95,14 @@
             app:layout_constraintTop_toBottomOf="@id/tv_playground_pet_name"
             tools:text="암컷" />
 
-        <TextView
+        <EditText
             android:id="@+id/tv_playground_pet_description"
             style="@style/Theme.AppCompat.TextView.Regular.Gray09.Size12"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:background="@drawable/rect_gray150_fill_10"
+            android:drawableEnd="@drawable/ic_pen"
             android:gravity="center_vertical"
             android:maxLines="1"
             android:paddingHorizontal="10dp"
