--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -57,7 +57,7 @@
                     style="@style/Theme.AppCompat.TextView.SemiBold.White.Size20"
                     playgroundAction="@{vm}"
                     playgroundBtn="@{vm.myFootprintMarker}"
-                    playgroundBtnVisibility="@{vm.petDetailInfo}"
+                    playgroundBtnVisibility="@{vm.playgroundInfo}"
                     android:layout_width="match_parent"
                     android:layout_height="56dp"
                     android:layout_marginTop="12dp"
