--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -22,7 +22,7 @@
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:id="@+id/layout_playground_detail"
-            playgroundDetailVisibility="@{vm.myFootprintMarker}"
+            playgroundDetailVisibility="@{vm.myPlaygroundMarker}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="invisible"
@@ -56,7 +56,7 @@
                     android:id="@+id/btn_playground"
                     style="@style/Theme.AppCompat.TextView.SemiBold.White.Size20"
                     playgroundAction="@{vm}"
-                    playgroundBtn="@{vm.myFootprintMarker}"
+                    playgroundBtn="@{vm.myPlaygroundMarker}"
                     playgroundBtnVisibility="@{vm.playgroundInfo}"
                     android:layout_width="match_parent"
                     android:layout_height="56dp"
@@ -126,7 +126,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_woof_location"
-            locationBtnMargin="@{vm.myFootprintMarker}"
+            locationBtnMargin="@{vm.myPlaygroundMarker}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -144,7 +144,7 @@
 
         <FrameLayout
             android:id="@+id/btn_woof_location"
-            locationBtnMargin="@{vm.myFootprintMarker}"
+            locationBtnMargin="@{vm.myPlaygroundMarker}"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginStart="10dp"
@@ -172,7 +172,7 @@
 
         <ImageButton
             android:id="@+id/btn_playground_pet_existence"
-            markBtnVisibility="@{vm.myFootprintMarker}"
+            petExistenceBtnVisibility="@{vm.myPlaygroundMarker}"
             uiState="@{vm.uiState}"
             android:layout_width="80dp"
             android:layout_height="80dp"
@@ -273,7 +273,7 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_woof_register_footprint"
                 style="@style/Theme.AppCompat.TextView.SemiBold.White.Size20"
-                cameraIdle="@{vm.registerFootprintBtn.cameraIdle}"
+                cameraIdle="@{vm.registerPlaygroundBtn.cameraIdle}"
                 uiState="@{vm.uiState}"
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
